feat: generate public error contracts
